--- a/event-form.component.html
+++ b/event-form.component.html
@@ -6,7 +6,7 @@
       
 
     <mat-form-field appearance="fill" class="full">
-      <mat-label>Description (optional)</mat-label>
+      <mat-label>Description </mat-label>
       <textarea matInput formControlName="description" rows="5"></textarea>
       <mat-hint align="end">{{ form.get('description')?.value?.length || 0 }}/500</mat-hint>
     </mat-form-field>
