--- a/event-list.component.html
+++ b/event-list.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
 
   <div class="table-headers">
-    <button mat-button (click)="toggleSort('title')">Title</button>
+    <button mat-button (click)="toggleSort('title')">Id</button>
     <button mat-button (click)="toggleSort('category')">Category</button>
     <button mat-button (click)="toggleSort('status')">Status</button>
     <button mat-button (click)="toggleSort('eventDate')">Date</button>
